log
Fri, May  2, 2025 11:04:37 PM: 
 tests:  1|8
total_score: 0/70
5729e4d
Sat, May  3, 2025  5:34:25 PM: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  1|8
total_score: 0/70
09d48f4
Sat, May  3, 2025  5:36:22 PM: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|8
total_score: 0/70
5f1699f
Sat, May  3, 2025  5:36:49 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
d637dd1
Sat, May  3, 2025  5:40:43 PM: 
 treemap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  4|7
total_score: 5/70
9e6736c
Sat, May  3, 2025  5:47:19 PM: 
 treemap.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:97:11: error: 'nod' undeclared (first use in this function)
     while(nod!=NULL)
           ^~~
treemap.c:97:11: note: each undeclared identifier is reported only once for each function it appears in
4ada1f1
